improve writing to fits files

--- a/Astropy.ipynb
+++ b/Astropy.ipynb
@@ -1431,8 +1431,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following contains the basic usages of writing your own fits files, it really easy using Astropy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -1441,15 +1448,25 @@
    },
    "outputs": [],
    "source": [
-    "# how to write a fits file\n",
+    "# how to write a fits file, contains primary table\n",
     "from astropy.io import fits\n",
     "import numpy as np\n",
     "# fits Header\n",
     "hdr = fits.Header()\n",
     "hdr['OBSERVER'] = 'Your name'\n",
     "hdr['COMMENT'] = \"Here's some comments about this FITS file.\"\n",
-    "primary_hdu = fits.PrimaryHDU(header=hdr)\n",
-    "# fits BinTable data\n",
+    "data = np.diag([1,2,3,4])\n",
+    "primary_hdu = fits.PrimaryHDU(data ,header=hdr)\n",
+    "primary_hdu.writeto('data/primary.fits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write BinTable data, it's must be column organised data\n",
     "c1 = fits.Column(name='a', array=np.array([1, 2]), format='K')\n",
     "c2 = fits.Column(name='b', array=np.array([4, 5]), format='K')\n",
     "c3 = fits.Column(name='c', array=np.array([7, 8]), format='K')\n",
@@ -1459,7 +1476,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wite a fits file contains serveral table\n",
+    "hdr = fits.Header()\n",
+    "hdr['OBSERVER'] = 'Your name'\n",
+    "hdr['COMMENT'] = \"Here's some comments about this FITS file.\"\n",
+    "primary_hdu = fits.PrimaryHDU(header=hdr)\n",
+    "data = np.diag([1,2,3,4])\n",
+    "image_hdu = fits.ImageHDU(data, name=\"image\")\n",
+    "c1 = fits.Column(name='a', array=np.array([1, 2]), format='K') # double int\n",
+    "c2 = fits.Column(name='b', array=np.array([4, 5]), format='K') # doubel int\n",
+    "c3 = fits.Column(name='c', array=np.array([7., 8.]), format='D') # double float\n",
+    "bintable_hdu = fits.BinTableHDU.from_columns([c1, c2, c3], name='bintable')\n",
+    "hdus = fits.HDUList([primary_hdu, image_hdu, bintable_hdu])\n",
+    "hdus.writeto('data/multitable.fits', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: data/multitable.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU       6   ()      \n",
+      "  1  IMAGE         1 ImageHDU         8   (4, 4)   int64   \n",
+      "  2  BINTABLE      1 BinTableHDU     15   2R x 3C   [K, K, D]   \n"
+     ]
+    }
+   ],
+   "source": [
+    "f = fits.open('data/multitable.fits')\n",
+    "f.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -1479,6 +1539,7 @@
     }
    ],
    "source": [
+    "# a useful command line tool 'showtable'\n",
     "!showtable data/table2.fits"
    ]
   },
